fix: Vertically centre main div on tablet screens

--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,8 @@ footer {
     display: flex;
     column-gap: 5rem;
     align-items: center;
-    margin-top: 15rem;
+    margin-top: auto;
+    margin-bottom: auto;
   }
   .left {
     flex: 1;
